--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -3,7 +3,7 @@
     "Token": "super secret key"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server= T5PT102; Database= Test; Trusted_Connection=True;"
+    "DefaultConnection": "Server= T5PT102; Database= DatingApp; Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
